# CHPC

./: .gitignore  .gitmodules  CMakeLists.txt  FLIRCamera.cpp  FLIRCamera.h  imgui.ini  main.cpp
include/: FLIRCamera.h  GPU.h  buffer.h  dataqueue.h  ui.h
src/: FLIRCamera.cpp  GPU.cpp  buffer.cpp  kernel.cu  main.cpp  ui.cpp
